--- a/startseite.html
+++ b/startseite.html
@@ -21,8 +21,8 @@
     <div class="head row">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button class="btn btn-outline-success topbar-responsive-button txt-color active"
-            type="submit" href="startseite.html">Startseite</button>
+          <button class="btn btn-outline-success topbar-responsive-button txt-color active" type="submit"
+            href="startseite.html">Startseite</button>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -61,8 +61,8 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <button class="btn btn-outline-success topbar-responsive-button txt-color active"
-                type="submit" href="impressum.html">Impressum</button>
+                <button class="btn btn-outline-success topbar-responsive-button txt-color active" type="submit"
+                  href="impressum.html">Impressum</button>
               </li>
             </ul>
             <form class="d-flex">
@@ -71,22 +71,7 @@
             </form>
           </div>
         </div>
-      </nav>
-      <!-- <div class="menue col-md-2">
-        <a href="startseite.html" class="hylinks">Startseite</a>
-      </div>
-      <div class="menue col-md-2">
-        <a href="seite1.html" class="hylinks">Dungeon Compendium</a>
-      </div>
-      <div class="menue col-md-4">
-        <a href="seite2.html" class="hylinks">Raid Compendium</a>
-      </div>
-      <div class="menue col-md-2">
-        <a href="seite3.html" class="hylinks">News</a>
-      </div>
-      <div class="menue col-md-2">
-        <a href="impressum.html" class="hylinks">Impressum</a>
-      </div> -->
+      </nav>     
     </div>
     <div class="center row">
       <div class="inhalt">
