--- a/dos.html
+++ b/dos.html
@@ -21,8 +21,8 @@
     <div class="head row">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button class="btn btn-outline-success topbar-responsive-button txt-color active"
-            type="submit" href="startseite.html">Startseite</button>
+          <a class="btn btn-outline-success topbar-responsive-button txt-color " type="submit"
+            href="startseite.html">Startseite</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active navbar-brand" aria-current="page" href="seite1.html">News</a>
+                <a class="nav-link active navbar-brand" aria-current="page" href="news.html">News</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -39,7 +39,7 @@
                   Dungeon
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Die Andre Seite</a></li>
+                  <li><a class="dropdown-item" href="dos.html">Die Andre Seite</a></li>
                   <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
                   <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
                   <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
@@ -55,14 +55,14 @@
                   Raid
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Schattenlande</a></li>
+                  <li><a class="dropdown-item" href="worldboss.html">Schattenlande</a></li>
                   <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
                   <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <button class="btn btn-outline-success topbar-responsive-button txt-color active"
-                type="submit" href="impressum.html">Impressum</button>
+                <button class="btn btn-outline-success topbar-responsive-button txt-color " type="submit"
+                  href="impressum.html">Impressum</button>
               </li>
             </ul>
             <form class="d-flex">
@@ -94,7 +94,7 @@
             src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
             alt="Logo" class="logo"> </div>
         <div class="col-md-8 offset-2 text1">
-            <h1>News</h1>
+          <p>Die Andere Seite
           </p>
         </div>
       </div>
