--- a/worldboss.html
+++ b/worldboss.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="btn btn-outline-success nav-link  navbar-brand" aria-current="page" href="news.html">News</a>
+                <a class="nav-link active navbar-brand" aria-current="page" href="news.html">News</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -50,7 +50,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                <a class="navbar-brand nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">
                   Raid
                 </a>
@@ -61,8 +61,8 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="btn btn-outline-success topbar-responsive-button txt-color active"
-                type="submit" href="impressum.html">Impressum</a>
+                <button class="btn btn-outline-success topbar-responsive-button txt-color "
+                type="submit" href="impressum.html">Impressum</button>
               </li>
             </ul>
             <form class="d-flex">
@@ -94,7 +94,7 @@
             src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
             alt="Logo" class="logo"> </div>
         <div class="col-md-8 offset-2 text1">
-          <p>Impressum
+          <p>Weltbosse der Schattenlande
           </p>
         </div>
       </div>
