--- a/news.html
+++ b/news.html
@@ -21,8 +21,8 @@
     <div class="head row">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="btn btn-outline-success topbar-responsive-button txt-color "
-            type="submit" href="startseite.html">Startseite</a>
+          <a class="btn btn-outline-success topbar-responsive-button txt-color" type="submit"
+            href="startseite.html">Startseite</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -31,7 +31,8 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="btn btn-outline-success nav-link  navbar-brand" aria-current="page" href="news.html">News</a>
+                <a class="btn-outline-success topbar-responsive-button txt-color nav-link active navbar-brand active"
+                  aria-current="page" href="news.html">News</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -61,8 +62,8 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="btn btn-outline-success topbar-responsive-button txt-color active"
-                type="submit" href="impressum.html">Impressum</a>
+                <a class="btn btn-outline-success topbar-responsive-button txt-color" type="submit"
+                  href="impressum.html">Impressum</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -94,7 +95,7 @@
             src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
             alt="Logo" class="logo"> </div>
         <div class="col-md-8 offset-2 text1">
-          <p>Impressum
+          <h1>News</h1>
           </p>
         </div>
       </div>
