--- a/startseite.html
+++ b/startseite.html
@@ -21,8 +21,8 @@
     <div class="head row">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button class="btn btn-outline-success topbar-responsive-button txt-color active" type="submit"
-            href="startseite.html">Startseite</button>
+          <a class="btn btn-outline-success topbar-responsive-button txt-color active" type="submit"
+            href="startseite.html">Startseite</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -31,15 +31,15 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active navbar-brand" aria-current="page" href="seite1.html">News</a>
-              </li>
+                <a class="btn btn-outline-success topbar-responsive-button txt-color "
+                type="submit" href="news.html">News</a>            
               <li class="nav-item dropdown">
-                <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                <a class="btn btn-outline-success topbar-responsive-button txt-color navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">
                   Dungeon
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Die Andre Seite</a></li>
+                  <li><a class="dropdown-item" href="dos.html">Die Andre Seite</a></li>
                   <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
                   <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
                   <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
@@ -50,19 +50,19 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                <a class="btn btn-outline-success topbar-responsive-button txt-color navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">
                   Raid
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Schattenlande</a></li>
+                  <li><a class="dropdown-item" href="worldboss.html">Schattenlande</a></li>
                   <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
                   <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <button class="btn btn-outline-success topbar-responsive-button txt-color active" type="submit"
-                  href="impressum.html">Impressum</button>
+                <a class="btn btn-outline-success topbar-responsive-button txt-color " type="submit"
+                  href="impressum.html">Impressum</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -174,7 +174,7 @@
         </div>
       </div>
     </div>
-    <div class="foot">
+    <div class="footer">
       Dravock Software Production
     </div>
   </div>
