--- a/news_neu.html
+++ b/news_neu.html
@@ -9,15 +9,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>All about WoW</title>
+    <title>WoW News</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container-fluid">
             <a class="navbar-brand btn btn-outline-success topbar-responsive-button txt-color "
                 href="startseite_neu.html">Startseite</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -64,6 +64,14 @@
                     </li>
                 </ul>
                 <form class="d-flex">
+                    <div class="nav-item">
+                        <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg "
+                            aria-current="page" href="registrieren.html">Registrieren</a>
+                      </div>
+                      <div class="nav-item">
+                        <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log "
+                            aria-current="page" href="login.html">Login</a>
+                      </div>
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
@@ -72,89 +80,138 @@
     </nav>
     <div class="center row">
         <div class="inhalt">
-            <div> </div>
             <div class="col-md-8 offset-2 text1">
-                <img src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
-                    alt="Logo" class="logo">
-                <h1>News</h1>
-                <div class="ba1">
-                    <a   href="guide1.html" > <h2>Der Goldguide</h2> </a>
-                    ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa.
-                    Cum
-                    sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                    ultricies
-                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                    fringilla vel,
-                    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-                    Nullam
-                    dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                    Aenean
-                    vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-                    Aliquam
-                    lorem
-                    ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
-                    Quisque
-                    rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
-                    eget
-                    dui.
-                    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
-                    adipiscing
-                    sem neque sed ipsum.</div>
-                <div class="trennlinie"><hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " /></div>
-                <div class="ba1">
-                    <h2 a href="#" >Levelguide</h2>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa.
-                    Cum
-                    sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                    ultricies
-                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                    fringilla vel,
-                    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-                    Nullam
-                    dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                    Aenean
-                    vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-                    Aliquam
-                    lorem
-                    ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
-                    Quisque
-                    rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
-                    eget
-                    dui.
-                    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
-                    adipiscing
-                    sem neque sed ipsum.</div>
-                    <div class="trennlinie"><hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " /></div>
-                <div class="ba1">
-                    <h2 a href="#">Klassenänderungen</h2>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa.
-                    Cum
-                    sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                    ultricies
-                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                    fringilla vel,
-                    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-                    Nullam
-                    dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                    Aenean
-                    vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-                    Aliquam
-                    lorem
-                    ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
-                    Quisque
-                    rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
-                    eget
-                    dui.
-                    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
-                    adipiscing
-                    sem neque sed ipsum.</div>
-                    <div class="trennlinie"><hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " /></div>
+                <img class="logo"
+                        src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
+                        alt="Logo" >
+                <h1>Neuigkeiten Rund um World of Warcraft</h1><br />
+                <div class="ba col-lg-12">
+                    <a href="guide1.html">
+                        <h2 class="BaÜberschriften">Der Goldguide</h2>
+                    </a>                    
+                    <div class="col-lg-12">
+                    <div class="col-lg-3"><img class="imgba" src="img/goldimg.jpg" alt="gold" ></div>
+                    <div class="txtba col-lg-12">
+                        dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                        ligula eget
+                        dolor. Aenean massa.
+                        Cum
+                        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+                        felis,
+                        ultricies
+                        nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                        fringilla vel,
+                        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+                        justo.
+                        Nullam
+                        dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
+                        semper nisi.
+                        Aenean
+                        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac,
+                        enim.
+                        Aliquam
+                        lorem
+                        ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+                        laoreet.
+                        Quisque
+                        rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+                        nisi. Nam
+                        eget
+                        dui.
+                        Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
+                        amet
+                        adipiscing
+                        sem neque sed ipsum.
+                    </div>
+                    <br />
+                    </div>
+                </div>
+                <div class="trennlinie">
+                    <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
+                </div>
+                <div class="ba col-lg-12">
+                    <a href="guide1.html">
+                    <h2 class="BaÜberschriften">Levelguide</h2>
+                </a>
+                    <div class="col-lg-3"><img class="imgba"src="img/world-of-warcraft-wow-classic-leveling-leveln-1-60.png"
+                            alt="lvlup" ></div>
+                    <div class="txtba col-lg-12">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                        ligula egetdolor. Aenean massa.Cumsociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quamelis,
+                        ultricies
+                        nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                        fringilla vel,
+                        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+                        justo.
+                        Nullam
+                        dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+                        nisi.
+                        Aenean
+                        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+                        Aliquam
+                        lorem
+                        ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+                        laoreet.
+                        Quisque
+                        rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.
+                        Nam
+                        eget
+                        dui.
+                        Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
+                        amet
+                        adipiscing
+                        sem neque sed ipsum.</div>
+                    <br />
+                </div>
+                <div class="trennlinie">
+                    <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
+                </div>
+                <div class="ba col-lg-12">
+                    <a href="guide1.html">
+                    <h2 class="BaÜberschriften">Klassenänderungen</h2>
+                </a>
+                    <div class="col-lg-3"><img class="imgba" src="img/Screenshot_Full_-_Armor_1.jpg" 
+                            alt="classchange" />
+                    </div>
+                    <div class="txtba col-lg-12">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                        commodo ligula eget
+                        dolor. Aenean massa.
+                        Cum
+                        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+                        felis,
+                        ultricies
+                        nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                        fringilla vel,
+                        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+                        justo.
+                        Nullam
+                        dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+                        nisi.
+                        Aenean
+                        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+                        Aliquam
+                        lorem
+                        ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+                        laoreet.
+                        Quisque
+                        rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.
+                        Nam
+                        eget
+                        dui.
+                        Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
+                        amet
+                        adipiscing
+                        sem neque sed ipsum.
+                    </div>
+                    <br />
+                </div>
+                <div class="trennlinie"> 
+                <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
+                
+                </div> 
             </div>
         </div>
-        <div class="footer">
+        <div class="footer row">
             Dravock Software Production
         </div>
     </div>
@@ -166,8 +223,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
