einfügen des anmeldeformulars

--- a/dos_neu.html
+++ b/dos_neu.html
@@ -142,6 +142,8 @@
                     rutrum
                     nunc. Nunc nonummy metus.<br />
                     <br />
+                    <a href="img/millificent.jpg" data-lightbox="photos" data-title="Millificent">
+                    <img src="img/millificent.jpg" alt="Dungeon Boss Manasturm" class="w-100 Dungeonboss"> </a>
                     Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam
                     nulla
                     eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit
@@ -166,6 +168,8 @@
                     posuere.
                     Praesent turpis.<br />
                     <br />
+                    <a href="img/wow_shadowlands_dungeon_andere_seite_19-händlerin.jpg" data-lightbox="photos" data-title="Händlerin">
+                    <img src="img/wow_shadowlands_dungeon_andere_seite_19-händlerin.jpg" alt="Dungeon Boss Händlerin" class="w-100 Dungeonboss"> </a>
                     Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor
                     sagittis
                     lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis.
@@ -190,6 +194,8 @@
                     felis
                     pretium feugiat. Vivamus quis mi.<br />
                     <br />
+                    <a href="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" data-lightbox="photos" data-title="Muehzala">
+                    <img src="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" alt="Dungeon Boss Muehzala" class="w-100 Dungeonboss"> </a>
                     Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit
                     ornare
                     lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus
