--- a/impressum_neu.html
+++ b/impressum_neu.html
@@ -99,7 +99,7 @@
           <h2 class="h2imp">Kontakt</h2>
           <p>Telefon: +49 (0) 123 44 55 66<br />
             Telefax: +49 (0) 123 44 55 99<br />
-            E-Mail: Deryan@keskin-neubulach.de</p>
+            E-Mail: Deryan@Keskin-Neubulach.de</p>
 
           <h2 class="h2imp">Redaktionell Verantwortlicher</h2>
           <p>Beate Beispielhaft<br />
