--- a/registrieren.html
+++ b/registrieren.html
@@ -80,25 +80,42 @@
 
       <div class="anmeldung">
         <div class="anmeldefenster">
-          <h1>All about WoW Anmeldung</h1>
+          <h1>All about WoW Anmeldung !</h1>
         </div>
         <br />
         <div class="anmeldefenster2">
           <form action="/action_page.php">
-            <label for="first-name">Vorname</label>
-            <input type="first-name" id="name" name="Vorname"><br /><br />
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email"><br /><br /> 
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email"><br /><br />
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email"><br /><br />           
-            <input type="submit" class="senden">
+            <label for="radio">Anrede</label><br />
+            <input type="radio" name="anrede" value="m">Herr
+            <input type="radio" name="anrede" value="w">Frau   
+            <input type="radio" name="anrede" value="nA">Keine Angabe<br />
+            <label for="first-name">Name</label><br />
+            <input type="text" id="first-name" name="first-name"placeholder=" Vornamen eingeben">
+            <input type="text" id="name" name="Name" placeholder="Nachname eingeben"><br />
+            <label for="user-Name">Nutzername & E-Mail</label><br />
+            <input type="text" id="user-name" name="user_name" placeholder="Username eingeben">
+            <input type="text" id="e-mail" name="user_email" placeholder="E-Mail eingeben"><br />
+            <label for="Adress ">Straße & Nr </label><br />
+            <input type="text" id="adresse" name="Adresse_straße" placeholder="Straße ">
+            <input type="number" id="adresse" name="Adresse_hausnummer" placeholder="Hausnummer "><br />
+            <label for="Adress">Stadt & PLZ</label><br />
+            <input type="text" id="adresse" name="Adresse_stadt" placeholder="Stadt ">
+            <input type="number" id="adresse" name="Adresse_plz" placeholder="PLZ "><br />
+            <label for="Adress">Land & Bundesland </label><br />
+            <input type="text" id="adresse" name="Adresse_land" placeholder="Land eingeben">
+            <input type="text" id="adresse" name="Adresse_bundesland" placeholder="Bundesland eingeben"><br />
+            <label for="phone" >Telefon</label><br />
+            <input type="number" id="phone"  name="phone_home" placeholder="Festnetznummer"><br />
+            <input type="number" id="phone"  name="phone_mobil" placeholder="Mobil"><br />
+            <label for="pwd">Passwort</label><br />
+            <input type="password" id="pwd" name="pwd" minlength="8" placeholder="Password eingeben"><br />              
+            <input type="submit" id="senden" name="senden" value="Absenden" >
           </form>
         </div>
       </div>
     </div>
   </div>
+  <!-- Footer Start -->
   <footer class="mainfooter bottom" role="contentinfo">
     <div class="footer-middle">
       <div class="container">
