--- a/worldboss_neu.html
+++ b/worldboss_neu.html
@@ -77,7 +77,7 @@
               href="login.html"><i class="bi bi-box-arrow-in-right"></i>&NonBreakingSpace;Login</a>
           </div>
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>          
+          <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -88,11 +88,11 @@
         <img
           src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
           alt="Logo" class="logo">
-        <h1> Weltbosse Shadowlands</h1>
+        <h1 > Weltbosse Shadowlands</h1><br />
         <div class="ba">
           <h1>Valinor, das Licht der Äonen</h1>
           <a href="img/valinor-m.jpg" data-lightbox="photos" data-title="Valinor">
-          <img src="img/valinor-m.jpg" alt="Worldboss Valinor" class="w-100 imgworldboss"></a>
+            <img src="img/valinor-m.jpg" alt="Worldboss Valinor" class="w-100 imgworldboss"></a>
           <br />
           ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
           dolor.
@@ -121,7 +121,7 @@
           <br />
           <h1>Nurgash Schlammborn</h1>
           <a href="img/nurgash-schlammborn-m.jpg" data-lightbox="photos" data-title="Nurgash Schlammborn">
-          <img src="img/nurgash-schlammborn-m.jpg" alt="Worldboss Nurgasch" class="w-100 imgworldboss"></a><br />
+            <img src="img/nurgash-schlammborn-m.jpg" alt="Worldboss Nurgasch" class="w-100 imgworldboss"></a><br />
           Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
           tincidunt
           tempus.
@@ -146,8 +146,10 @@
           nunc. Nunc nonummy metus.<br />
           <br />
           <h1>Mortanis</h1>
-          <a href="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" data-lightbox="photos" data-title="Mortanis">
-          <img src="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" alt="Worldboss Mortanis" class="w-100 imgworldboss"></a><br />
+          <a href="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" data-lightbox="photos"
+            data-title="Mortanis">
+            <img src="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" alt="Worldboss Mortanis"
+              class="w-100 imgworldboss"></a><br />
           Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam
           nulla
           eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit
@@ -215,8 +217,10 @@
           Fusce pharetra convallis urna. Quisque ut nisi. Donec mi odio, faucibus at, scelerisque quis,
           <br /><br />
           <h1>Oranomonos die Immersprießende</h1>
-          <a href="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg" data-lightbox="photos" data-title="oranomonos">
-          <img src="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg" alt="Worldboss oranomonos" class="w-100 imgworldboss"></a><br />
+          <a href="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg"
+            data-lightbox="photos" data-title="oranomonos">
+            <img src="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg"
+              alt="Worldboss oranomonos" class="w-100 imgworldboss"></a><br />
           Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor
           sagittis
           lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis.
@@ -268,79 +272,79 @@
       </div>
     </div>
   </div>
-<!-- footer Start -->
-<footer class="mainfooter" role="contentinfo">
-  <div class="footer-middle">
-    <div class="container">
-      <div class="row col-lg-12">
-        <div class="col-lg-3 col-sm-6">
-          <!--Column1-->
-          <div class="footer-pad">
-            <h4>Heading 1</h4>
-            <ul class="list-unstyled">
-              <li><a href="#"></a></li>
-              <li><a href="#">Payment Center</a></li>
-              <li><a href="#">Contact Directory</a></li>
-              <li><a href="#">Forms</a></li>
-              <li><a href="#">News and Updates</a></li>
-              <li><a href="#">FAQs</a></li>
-            </ul>
+  <!-- footer Start -->
+  <footer class="mainfooter" role="contentinfo">
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row col-lg-12">
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 1</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="#">Payment Center</a></li>
+                <li><a href="#">Contact Directory</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">News and Updates</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <!--Column1-->
-          <div class="footer-pad">
-            <h4>Heading 2</h4>
-            <ul class="list-unstyled">
-              <li><a href="#">Website Tutorial</a></li>
-              <li><a href="#">Accessibility</a></li>
-              <li><a href="#">Disclaimer</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">FAQs</a></li>
-              <li><a href="#">Webmaster</a></li>
-            </ul>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 2</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Website Tutorial</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Webmaster</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <!--Column1-->
-          <div class="footer-pad">
-            <h4>Heading 3</h4>
-            <ul class="list-unstyled">
-              <li><a href="#">Parks and Recreation</a></li>
-              <li><a href="#">Public Works</a></li>
-              <li><a href="#">Police Department</a></li>
-              <li><a href="#">Fire</a></li>
-              <li><a href="#">Mayor and City Council</a></li>
-              <li>
-                <a href="#"></a>
-              </li>
-            </ul>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 3</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Parks and Recreation</a></li>
+                <li><a href="#">Public Works</a></li>
+                <li><a href="#">Police Department</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Mayor and City Council</a></li>
+                <li>
+                  <a href="#"></a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-3">
-          <h4>Follow Us</h4>
+          <div class="col-lg-3">
+            <h4>Follow Us</h4>
 
-          <ul class="social-network social-circle">
-            <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
+            <ul class="social-network social-circle">
+              <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <br />
-      <div class="row col-lg-12">
-        <div class="col-lg-12 copy">
-          <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.</p>
+        <br />
+        <div class="row col-lg-12">
+          <div class="col-lg-12 copy">
+            <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"></script>
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
   <!-- skripte für Footer -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
