--- a/dos_neu.html
+++ b/dos_neu.html
@@ -86,7 +86,7 @@
     <div class="center row">
         <div class="inhalt">
 
-            <div class="col-md-8 offset-2 text1">
+            <div class="col-lg-8 offset-lg-2 text1">
                 <img src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
                     alt="Logo" class="logo">
                 <h1>Die Andre Seite</h1>
