--- a/impressum_neu.html
+++ b/impressum_neu.html
@@ -83,7 +83,7 @@
   </nav>
   <div class="center row">
     <div class="inhalt">
-      <div class="col-md-8 offset-2 text1">
+      <div class="col-lg-8 offset-lg-2 text1">
         <img
           src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
           alt="Logo" class="logo">        
