lorem texte ersetzt und bildergallerie eingeügt

--- a/impressum_neu.html
+++ b/impressum_neu.html
@@ -62,6 +62,10 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+              href="bildergallerie.html">Bildergallerie</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color active" aria-current="page"
               href="impressum_neu.html">Impressum</a>
           </li>
@@ -87,7 +91,7 @@
         <img
           src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
           alt="Logo" class="logo">        
-          <h1>Impressum</h1>
+          <h1 class="wowschrift">Impressum</h1>
           <div class="ba">
           <div class="textimp">
 
@@ -102,9 +106,9 @@
             E-Mail: Deryan@Keskin-Neubulach.de</p>
 
           <h2 class="h2imp">Redaktionell Verantwortlicher</h2>
-          <p>Beate Beispielhaft<br />
-            Musterstra&szlig;e 110<br />
-            90210 Musterstadt</p>
+          <p>Deryan Keskin<br />
+            Sommerbergstraße 5<br />
+            75387 Neubulach</p>
 
           <h3 class="h2imp">Haftung für Inhalte</h3>
           <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten
