--- a/worldboss_neu.html
+++ b/worldboss_neu.html
@@ -52,7 +52,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#"
+            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button active txt-color " href="#"
               id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Raid
             </a>
@@ -61,6 +61,10 @@
               <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
               <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
             </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+              href="bildergallerie.html">Bildergallerie</a>
           </li>
           <li class="nav-item">
             <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
@@ -88,185 +92,60 @@
         <img
           src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
           alt="Logo" class="logo">
-        <h1 > Weltbosse Shadowlands</h1><br />
+        <h1 class="wowschrift"> Weltbosse Shadowlands</h1><br />
         <div class="ba">
-          <h1>Valinor, das Licht der Äonen</h1>
+          <h1 class="wowschrift">Valinor, das Licht der Aeonen</h1>
           <a href="img/valinor-m.jpg" data-lightbox="photos" data-title="Valinor">
             <img src="img/valinor-m.jpg" alt="Worldboss Valinor" class="w-100 imgworldboss"></a>
-          <br />
-          ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-          dolor.
-          Aenean massa.
-          Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-          ultricies
-          nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-          fringilla
-          vel,
-          aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-          Nullam
-          dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-          Aenean
-          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-          Aliquam
-          lorem
-          ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
-          Quisque
-          rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
-          eget
-          dui.
-          Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
-          adipiscing
-          sem neque sed ipsum.<br />
-          <br />
-          <h1>Nurgash Schlammborn</h1>
+            <p>Der unglaublich mächtige Zenturio Valinor wurde von den Kyrianern erschaffen,
+              um ihre Kämpfgestähltesten Krieger zu prüfen. Doch seit die Verschmähten ihn entführt und mit der Saat des Zweifels
+              infiziert haben, betrachtet Valinor alle Gegner als Herausforderer. </p>
+            <br />
+            <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
+            <p>Valinor wird aktiv , sobald alle Fässer mit Anima in der Nähe zerstört wurden. Er wird von Lysonia befehligt, die in der Nähe schwebt. 
+            Seine mächtige 'Animaladung' verursacht Schaden in einem Bereich und sollte gemieden werden , und er kann Gruppen von Gegnern mit 
+            'Geladene Animaexplosion' dezimieren, wenn diese sich nicht verteilen. Valinor setzt regelmäßig 'Entfesselte Anima' ein und greift während 
+            der Effektdauer viele Bereiche mit 'Animaladung' an </p>
+          <hr />
+          <h1 class="wowschrift">Nurgash Schlammborn</h1>
           <a href="img/nurgash-schlammborn-m.jpg" data-lightbox="photos" data-title="Nurgash Schlammborn">
             <img src="img/nurgash-schlammborn-m.jpg" alt="Worldboss Nurgasch" class="w-100 imgworldboss"></a><br />
-          Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-          tincidunt
-          tempus.
-          Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros
-          faucibus
-          tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
-          consequat,
-          leo
-          eget
-          bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend
-          sapien.
-          Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui.
-          Cras
-          ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices
-          posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu
-          tortor,
-          suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante
-          arcu,
-          accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum
-          rutrum
-          nunc. Nunc nonummy metus.<br />
+          <p>Nurgash wurde aus der schlannufeb Nasse vieler tropfender Gräber geformt und von Denathrius' besten Zauberern mit dunkler Magie verstärkt.
+            Er mag ja nicht der intelligenteste Diener sein , doch seine Fäuste können ganze Schlösser niederreißen.</p>
           <br />
-          <h1>Mortanis</h1>
+          <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
+          <p>Nurgash ist ein mächtiger Krieger , der mit seinen Fäusten hart zuschlägt. Er nutzt außerdem Steinmagie, um einen Bereich mit 'Erdexplosion' 
+          anzugreifen, und lässt einen 'Steinhagel' auf alle weit entfernten Gegner niedergehen, also bleibt in seiner Nähe. Durch 'Gehärterter Schlamm' 
+          wird er mit der Zeit stärker und kann gegen ende des Kampfes sehr hohen Schaden verursachen. </p>
+          <hr />
+          <h1 class="wowschrift">Mortanis</h1>
           <a href="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" data-lightbox="photos"
             data-title="Mortanis">
             <img src="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" alt="Worldboss Mortanis"
               class="w-100 imgworldboss"></a><br />
-          Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam
-          nulla
-          eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit
-          risus.
-          Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque.
-          Phasellus
-          leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non,
-          euismod
-          vitae,
-          posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae
-          tortor.
-          Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in
-          faucibus
-          orci
-          luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod
-          orci,
-          ac
-          placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus,
-          bibendum
-          sed,
-          posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque
-          posuere.
-          Praesent turpis.<br />
-          Fusce fermentum. Nullam cursus lacinia erat. Praesent blandit laoreet nibh. Fusce convallis metus id
-          felis
-          luctus adipiscing. Pellentesque egestas, neque sit amet convallis pulvinar, justo nulla eleifend
-          augue,
-          ac
-          auctor orci leo non est. Quisque id mi. Ut tincidunt tincidunt erat. Etiam feugiat lorem non metus.
-          Vestibulum
-          dapibus nunc ac augue. Curabitur vestibulum aliquam leo. Praesent egestas neque eu enim. In hac
-          habitasse
-          platea dictumst. Fusce a quam. Etiam ut purus mattis mauris sodales aliquam. Curabitur nisi. Quisque
-          malesuada
-          placerat nisl. Nam ipsum risus, rutrum vitae, vestibulum eu, molestie vel, lacus. Sed augue ipsum,
-          egestas
-          nec, vestibulum et, malesuada adipiscing, dui. Vestibulum facilisis, purus nec pulvinar iaculis,
-          ligula
-          mi
-          congue nunc, vitae euismod ligula urna in dolor. Mauris sollicitudin fermentum libero. Praesent
-          nonummy
-          mi
-          in
-          odio. Nunc interdum lacus sit amet orci. Vestibulum rutrum, mi nec elementum vehicula, eros quam
-          gravida
-          nisl,
-          id fringilla neque ante vel mi. Morbi mollis tellus ac sapien. Phasellus volutpat, metus eget
-          egestas
-          mollis,
-          lacus lacus blandit dui, id egestas quam mauris ut lacus. Fusce vel dui. Sed in libero ut nibh
-          placerat
-          accumsan. Proin faucibus arcu quis ante. In consectetuer turpis ut velit. Nulla sit amet est.
-          Praesent
-          metus
-          tellus, elementum eu, semper a, adipiscing nec, purus. Cras risus ipsum, faucibus ut, ullamcorper
-          id,
-          varius
-          ac, leo. Suspendisse feugiat. Suspendisse enim turpis, dictum sed, iaculis a, condimentum nec, nisi.
-          Praesent
-          nec nisl a purus blandit viverra. Praesent ac massa at ligula laoreet iaculis. Nulla neque dolor,
-          sagittis
-          eget, iaculis quis, molestie non, velit. Mauris turpis nunc, blandit et, volutpat molestie, porta
-          ut,
-          ligula.
-          Fusce pharetra convallis urna. Quisque ut nisi. Donec mi odio, faucibus at, scelerisque quis,
-          <br /><br />
-          <h1>Oranomonos die Immersprießende</h1>
+            <p>Mortanis ist einer der belesensten Totenbeschwörer des Hauses der Rituale und arbeitet unermüdlich an einem Mittel, das ihm 
+              eine mächtigere Gestalt verleihen kann.Nun steht er kurz vor dem Durchbruch.</p>
+            <br />
+            <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
+            <p>Mortanis beginnt den Kampf , sobald alle seine Totenbeschwörer besiegt sind , und verwandelt sich in eine mächtige Kreatur aus Knochen.
+            'Krichendes Rückgrat' fügt Gegnern in einer Linie schweren Schaden zu, während 'Wiederspenstige Überreste' dreinmal in kreisförmigen
+            bereichen ansteigender Größe ausbrechen. Mehrrere seiner Angriffe teilen ihren Schaden auf die betroffenen Spielercharacktere auf , 
+            darunter 'Schreiender Schädel' und 'Knochenspalten'. Sobald er geschwächt ist , setzt er 'Herr der Gefallenen' ein und kann während
+            der Effektdauer schnell Flachenschadenszauber einsetzen.</p>
+            <hr />
+          <h1 class="wowschrift">Oranomonos die Immerspriessende</h1>
           <a href="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg"
             data-lightbox="photos" data-title="oranomonos">
             <img src="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg"
-              alt="Worldboss oranomonos" class="w-100 imgworldboss"></a><br />
-          Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor
-          sagittis
-          lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis.
-          Suspendisse
-          pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis
-          nunc.
-          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id
-          purus.
-          Ut
-          varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque.
-          Pellentesque
-          habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna,
-          posuere
-          eget,
-          vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor
-          neque
-          nec
-          urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede.
-          Pellentesque
-          habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim
-          eleifend
-          felis
-          pretium feugiat. Vivamus quis mi.<br />
-          <br />
-          Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit
-          ornare
-          lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus
-          gravida
-          semper nisi. Nullam vel sem. Pellentesque libero tortor, tincidunt et, tincidunt eget, semper nec,
-          quam.
-          Sed
-          hendrerit. Morbi ac felis. Nunc egestas, augue at pellentesque laoreet, felis eros vehicula leo, at
-          malesuada
-          velit leo quis pede. Donec interdum, metus et hendrerit aliquet, dolor diam sagittis ligula, eget
-          egestas
-          libero turpis vel mi. Nunc nulla. Fusce risus nisl, viverra et, tempor et, pretium in, sapien. Donec
-          venenatis
-          vulputate lorem. Morbi nec metus. Phasellus blandit leo ut odio. Maecenas ullamcorper, dui et
-          placerat
-          feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. Sed magna purus, fermentum
-          eu,
-          tincidunt eu, varius ut, felis. In auctor lobortis lacus. Quisque libero metus, condimentum nec,
-          tempor
-          a,
-          commodo mollis, magna. Vestibulum ullamcorper mauris at ligula.<br />
-          <br />
+              alt="Worldboss oranomonos" class="w-100 imgworldboss img-responive"></a><br />
+          <p>Oranomonos war einst die älteste Wächterin von Tirna Scithe, doch mittlerweile welkt sie ander der Seite des großen Baums dahin.
+            Da ihr kaum noch Anima bleibt, ist sie nicht mehr in der Lage, Freund von Feind zu unterscheiden, während sich die Gorm ab ihrem 
+            verfallenden Leib satt fressen.
+          </p>
+          <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
+          <p>Oranomonos liegt im Sterben , verfügt aber immer noch über große Macht , die sie gegen Euch einsetzt. Bleibt auf distanz, wenn sie die 
+          'Saat des Kummers' herbeiruft, und meidet 'Verdorrte Winde' , die sich umherbewegen. Nutzt mächtige Defensivfähigkeiten und versammelt Euch
+          für effizientere Heilung, wenn sie ihr 'Klagelied des gefallenen Sanktums' singt.</p>
 
         </div>
       </div>
