--- a/bildergallerie.html
+++ b/bildergallerie.html
@@ -9,6 +9,7 @@
 <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
 <!-- footer css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -61,7 +62,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color active" aria-current="page"
               href="bildergallerie.html">Bildergallerie</a>
           </li>
           <li class="nav-item">
@@ -86,8 +87,20 @@
   </nav>
   <div class="center row">
     <div class="Inhalt">
-      <div class="col-lg-8 offset-2 text1">
-        <p id="inbearbeitung">Dies Seite ist momentan noch in Bearbeitung!</p>
+      <div class="col-lg-8 offset-2 Galleriefenster">
+        <a href="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg"data-lightbox="photos"
+        data-title="Mortanis">
+        <img src="img/21873-mortanis-maldraxxus-weltboss-ist-diese-woche-verfugbar.jpg" alt="mortanis" class="img-thumbnail" ></a>
+        <a href="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg" data-lightbox="photos"
+         data-title="oranomonos">
+        <img src="img/21874-oranomonos-die-immerspriessende-ardenwald-weltboss-diese-woche-verfugbar.jpg" alt="oranomonos" class="img-thumbnail"> </a>
+        <a href="img/nurgash-schlammborn-m.jpg" data-lightbox="photos"
+         data-title="Nurgash">
+        <img src="img/nurgash-schlammborn-m.jpg" alt="Nurgash" class="img-thumbnail"> </a>
+        <a href="img/valinor-m1.jpg" data-lightbox="photos" data-title="Valinor">
+        <img src="img/valinor-m1.jpg" alt="Valinor" class="img-thumbnail"></a>
+        <a href="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" data-lightbox="photos" data-title="Mueh'zala">
+            <img src="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" alt="Mueh'zala" class="img-thumbnail"></a>
       </div>
     </div>
   </div>
@@ -168,6 +181,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
