--- a/dos_neu.html
+++ b/dos_neu.html
@@ -37,11 +37,11 @@
                             aria-current="page" href="news_neu.html">News</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color"
+                        <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color active"
                             href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Dungeon
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
                             <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
                             <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
@@ -62,6 +62,10 @@
                             <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
                             <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+                        href="bildergallerie.html">Bildergallerie</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color "
@@ -89,177 +93,59 @@
             <div class="col-lg-8 offset-lg-2 text1">
                 <img src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
                     alt="Logo" class="logo">
-                <h1>Die Andre Seite</h1>
-                <div class="ba">
-                    <a href="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" data-lightbox="photos" data-title=hakar>
-                   <img src="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" alt="Dungeon Boss Hakar" class="w-100 Dungeonboss"> </a>
-                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor.
-                    Aenean massa.
-                    Cum
-                    sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                    ultricies
-                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                    fringilla
-                    vel,
-                    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-                    Nullam
-                    dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-                    Aenean
-                    vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-                    Aliquam
-                    lorem
-                    ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
-                    Quisque
-                    rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
-                    eget
-                    dui.
-                    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
-                    adipiscing
-                    sem neque sed ipsum.<br />
+                <h1 class="wowschrift">Die Andre Seite</h1>
+                <div class="baDoS">
+                  <h2 class="wowschrift">Hakkar der Seelenschinder</h2>
+                  <div>  <a href="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" data-lightbox="photos" data-title=hakar>
+                   <img src="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" alt="Dungeon Boss Hakar" class="w-100 Dungeonboss"> </a></div>
+                   <p>Allein die Anwesenheit von Hakkar dem Seelenschinder hat in Azeroth für Aufruhr gesorgt.Gewalt und Verseuchung sind Zeichnen seiner
+                   unermesslichenMacht und erfüllen sein ganzes Wesen.Seine Getreuen kämpfen für ihn bis in den Tod und auch noch darüber hinaus.
+                   Macht aufzugeben kam fpr ihn nie in Frage selbst wenn es nicht seine eigene war!</p>            
+                   <br />
+                   <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf:</span>
+                    <br />
+                     <p>Hakkar nutzt eine Blutbarriere , um sich selbst vor Angriffen zu schützen, und greift dann mit einem Zerstörerischen Bluttbeschuss an.
+                    Hakkars Atal'aipriester eilen an seine Seite und werden während der begegnung zu Söhnen von Hakkar.</p>
+                    <hr />
+                    <h2 class="wowschrift">Die Manasturms</h2>
                     <a href="img/wow_shadowlands_dungeon_andere_seite_manasturm1.jpg" data-lightbox="photos" data-title="Manasturm">
-                    <img src="img/wow_shadowlands_dungeon_andere_seite_manasturm1.jpg" alt="Dungeon Boss Manasturm" class="w-100 Dungeonboss"> </a>
-                    Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-                    tincidunt
-                    tempus.
-                    Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros
-                    faucibus
-                    tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
-                    consequat,
-                    leo
-                    eget
-                    bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend
-                    sapien.
-                    Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui.
-                    Cras
-                    ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et
-                    ultrices
-                    posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu
-                    tortor,
-                    suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante
-                    arcu,
-                    accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum
-                    rutrum
-                    nunc. Nunc nonummy metus.<br />
+                    <img src="img/wow_shadowlands_dungeon_andere_seite_manasturm1.jpg" alt="Dungeon Boss manasturm" class="w-100 Dungeonboss"></a>
                     <br />
-                    <a href="img/millificent.jpg" data-lightbox="photos" data-title="Millificent">
-                    <img src="img/millificent.jpg" alt="Dungeon Boss Manasturm" class="w-100 Dungeonboss"> </a>
-                    Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam
-                    nulla
-                    eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit
-                    risus.
-                    Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque.
-                    Phasellus
-                    leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non,
-                    euismod
-                    vitae,
-                    posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae
-                    tortor.
-                    Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in
-                    faucibus
-                    orci
-                    luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod
-                    orci,
-                    ac
-                    placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus,
-                    bibendum
-                    sed,
-                    posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque
-                    posuere.
-                    Praesent turpis.<br />
+                    <p>Absolute Ehrlichkeit und volles Vertrauen machen Millificent und Millhaus Manasturm zu einer Naturgewalt unter den mächtigsten 
+                      Paaren dieser Welt. Nun , Ehrlichkeit und Vertrauen , gemischt mit überwältigender Magie und experimenteller Technologie. 
+                      Wenn diese vier Elemente in perfekter Harmonie zusammenspielen, sind die Manasturms das gefährlichste und verheerendste Paar weit und breit!
+                    </p>
                     <br />
+                    <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>                 
+                    <p>Millhaus und Millificent greifen Spielercharacktere abwechselnd in ihrer geheimen Werkstatt an ,wobei einer von ihnen in der Werkstatt
+                    steht und der andere von oben Unterstüzung bietet.</p>
+                    <hr />    
+                    <h2 class="wowschrift">Haendlerin Xy'exa</h2>
                     <a href="img/wow_shadowlands_dungeon_andere_seite_19-händlerin.jpg" data-lightbox="photos" data-title="Händlerin">
-                    <img src="img/wow_shadowlands_dungeon_andere_seite_19-händlerin.jpg" alt="Dungeon Boss Händlerin" class="w-100 Dungeonboss"> </a>
-                    Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor
-                    sagittis
-                    lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis.
-                    Suspendisse
-                    pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis
-                    nunc.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id
-                    purus.
-                    Ut
-                    varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque.
-                    Pellentesque
-                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna,
-                    posuere
-                    eget,
-                    vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor
-                    neque
-                    nec
-                    urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede.
-                    Pellentesque
-                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim
-                    eleifend
-                    felis
-                    pretium feugiat. Vivamus quis mi.<br />
-                    <br />
+                    <img src="img/wow_shadowlands_dungeon_andere_seite_19-händlerin.jpg" alt="Dungeon Boss Händlerin" class="w-100 Dungeonboss"> </a>                   
+                    <p>Händlerin Xy'exa ist eine gerissene Akquisiteurin , die über die Jahrtausende hinwege unzählige magische Vorrichtungen angesammelt
+                      hat.Sie manipuliert den Raum um sich herum , um den vielen Feinden , die sie sich bei ihren Geschäften gemacht hat , immer einen Schritt
+                      voraus zu bleiben.</p>
+                                
+                    <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
+                      <p>Händlerin Xy'exa nutzt arkane Mittlertechnologie , um Portale und magische Explosionen ui erschaffen , die ihre Gegner versetzen 
+                      und ihnen Schaden zufügen.Da sie ihre eigne List für unübertroffen hält , könnte diese Magie natürlich niemals gegen sie selbst eingesetzt
+                      werden.</p> 
+                    <hr />
+                    <h2 class="wowschrift">Mueh'zala</h2>
                     <a href="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" data-lightbox="photos" data-title="Muehzala">
                     <img src="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" alt="Dungeon Boss Muehzala" class="w-100 Dungeonboss"> </a>
-                    Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit
-                    ornare
-                    lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus
-                    gravida
-                    semper nisi. Nullam vel sem. Pellentesque libero tortor, tincidunt et, tincidunt eget, semper nec,
-                    quam.
-                    Sed
-                    hendrerit. Morbi ac felis. Nunc egestas, augue at pellentesque laoreet, felis eros vehicula leo, at
-                    malesuada
-                    velit leo quis pede. Donec interdum, metus et hendrerit aliquet, dolor diam sagittis ligula, eget
-                    egestas
-                    libero turpis vel mi. Nunc nulla. Fusce risus nisl, viverra et, tempor et, pretium in, sapien. Donec
-                    venenatis
-                    vulputate lorem. Morbi nec metus. Phasellus blandit leo ut odio. Maecenas ullamcorper, dui et
-                    placerat
-                    feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. Sed magna purus, fermentum
-                    eu,
-                    tincidunt eu, varius ut, felis. In auctor lobortis lacus. Quisque libero metus, condimentum nec,
-                    tempor
-                    a,
-                    commodo mollis, magna. Vestibulum ullamcorper mauris at ligula.<br />
-                    <br />
-                    Fusce fermentum. Nullam cursus lacinia erat. Praesent blandit laoreet nibh. Fusce convallis metus id
-                    felis
-                    luctus adipiscing. Pellentesque egestas, neque sit amet convallis pulvinar, justo nulla eleifend
-                    augue,
-                    ac
-                    auctor orci leo non est. Quisque id mi. Ut tincidunt tincidunt erat. Etiam feugiat lorem non metus.
-                    Vestibulum
-                    dapibus nunc ac augue. Curabitur vestibulum aliquam leo. Praesent egestas neque eu enim. In hac
-                    habitasse
-                    platea dictumst. Fusce a quam. Etiam ut purus mattis mauris sodales aliquam. Curabitur nisi. Quisque
-                    malesuada
-                    placerat nisl. Nam ipsum risus, rutrum vitae, vestibulum eu, molestie vel, lacus. Sed augue ipsum,
-                    egestas
-                    nec, vestibulum et, malesuada adipiscing, dui. Vestibulum facilisis, purus nec pulvinar iaculis,
-                    ligula
-                    mi
-                    congue nunc, vitae euismod ligula urna in dolor. Mauris sollicitudin fermentum libero. Praesent
-                    nonummy
-                    mi
-                    in
-                    odio. Nunc interdum lacus sit amet orci. Vestibulum rutrum, mi nec elementum vehicula, eros quam
-                    gravida
-                    nisl,
-                    id fringilla neque ante vel mi. Morbi mollis tellus ac sapien. Phasellus volutpat, metus eget
-                    egestas
-                    mollis,
-                    lacus lacus blandit dui, id egestas quam mauris ut lacus. Fusce vel dui. Sed in libero ut nibh
-                    placerat
-                    accumsan. Proin faucibus arcu quis ante. In consectetuer turpis ut velit. Nulla sit amet est.
-                    Praesent
-                    metus
-                    tellus, elementum eu, semper a, adipiscing nec, purus. Cras risus ipsum, faucibus ut, ullamcorper
-                    id,
-                    varius
-                    ac, leo. Suspendisse feugiat. Suspendisse enim turpis, dictum sed, iaculis a, condimentum nec, nisi.
-                    Praesent
-                    nec nisl a purus blandit viverra. Praesent ac massa at ligula laoreet iaculis. Nulla neque dolor,
-                    sagittis
-                    eget, iaculis quis, molestie non, velit. Mauris turpis nunc, blandit et, volutpat molestie, porta
-                    ut,
-                    ligula.
-                    Fusce pharetra convallis urna. Quisque ut nisi. Donec mi odio, faucibus at, scelerisque quis,
+                    <p>Vater des Schlafs , Sohn der Zeit und Freund der Nacht. Schon lange bevor Bwondsamdi seine erste Abmachung traf , führte Mueh'zala 
+                      die Toten von Azeroth zu ihrer letzten Ruhestätte. Er weiß , dass ein Gott herrschen sollte , anstatt sich bei seinen Dienern und Verehrern 
+                      anzubiedern. Die Pläne , die ervor Urzeiten schmiedete , um seine Macht zu zurückzuerlangen , werden Früchte tragen ... sobald er sich 
+                      um seinen rebellischen Vertreter gekümmert hat.</p>
+                      <br />
+                      <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>  
+                      <p>Mueh'zala bekämpft die Spielercharacktere im Reich der Andren Seite. Mueh'zala setzt Realitätszersplitterung eom imd zersplittert 
+                      in mehrere Teile, was Spielercharackteren eine Gelegenheit gibt Mueh'zalas zersplitterte Anlitze zu besiegen und Bwondsamdi aus seinen 
+                      Fesseln zu befreien . Wenn Mueh'zala beginngt Realitätszersplitterung zu wirken , manifestiert sich Bwondsamdi durch das von Spielercharackteren
+                      gesammelte Mojo und bietet einen Fluchtweg durch Schwarze Tore.</p> 
+                      
                 </div>
             </div>
         </div>
