--- a/login.html
+++ b/login.html
@@ -57,6 +57,10 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+              href="bildergallerie.html">Bildergallerie</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page" href="impressum_neu.html">Impressum</a>
           </li>
         </ul>
