--- a/registrieren.html
+++ b/registrieren.html
@@ -63,6 +63,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+              href="bildergallerie.html">Bildergallerie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
               href="impressum_neu.html">Impressum</a>
           </li>
         </ul>
