--- a/bildergallerie.html
+++ b/bildergallerie.html
@@ -100,7 +100,17 @@
         <a href="img/valinor-m1.jpg" data-lightbox="photos" data-title="Valinor">
         <img src="img/valinor-m1.jpg" alt="Valinor" class="img-thumbnail"></a>
         <a href="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" data-lightbox="photos" data-title="Mueh'zala">
-            <img src="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" alt="Mueh'zala" class="img-thumbnail"></a>
+        <img src="img/wow_shadowlands_dungeon_andere_seite_17-muehzala.jpg" alt="Mueh'zala" class="img-thumbnail"></a>
+        <a href="img/mainchar1.jpg" data-lightbox="photos" data-title="mainchar1">
+        <img src="img/mainchar1.jpg" alt="mainchar1" class="img-thumbnail"></a>
+        <a href="img/meinchar2.jpg" data-lightbox="photos" data-title="meinchar2">
+        <img src="img/meinchar2.jpg" alt="meinchar2" class="img-thumbnail"></a>
+        <a href="img/mainchar3.jpg" data-lightbox="photos" data-title="meinchar3">
+        <img src="img/mainchar3.jpg" alt="meinnchar3" class="img-thumbnail"></a>
+        <a href="img/jaina.jpg" data-lightbox="photos" data-title="Lady jaina">
+        <img src="img/jaina.jpg" alt="Lady Jaina" class="img-thumbnail"></a>
+        <a href="img/freunde.jpg" data-lightbox="photos" data-title="Freunde">
+        <img src="img/freunde.jpg" alt="firends" class="img-thumbnail"></a>
       </div>
     </div>
   </div>
