--- a/worldboss_neu.html
+++ b/worldboss_neu.html
@@ -42,13 +42,13 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
-              <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
-              <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
-              <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
-              <li><a class="dropdown-item" href="#">Spitzen des Aufstiegs</a></li>
-              <li><a class="dropdown-item" href="#">Nebel von Tirna Scithe</a></li>
-              <li><a class="dropdown-item" href="#">Theater der Schmerzen</a></li>
-              <li><a class="dropdown-item" href="#">Seuchensturz</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Die Nekrotische Schneiße</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Hallen der Sühne</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Blutige Tiefen</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Spitzen des Aufstiegs</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Nebel von Tirna Scithe</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Theater der Schmerzen</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Seuchensturz</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -58,8 +58,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="worldboss_neu.html">Schattenlande</a></li>
-              <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
-              <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Schloss Nathria</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Ketten der Herrschaft</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -140,13 +140,12 @@
               alt="Worldboss oranomonos" class="w-100 imgworldboss img-responive"></a><br />
           <p>Oranomonos war einst die älteste Wächterin von Tirna Scithe, doch mittlerweile welkt sie ander der Seite des großen Baums dahin.
             Da ihr kaum noch Anima bleibt, ist sie nicht mehr in der Lage, Freund von Feind zu unterscheiden, während sich die Gorm ab ihrem 
-            verfallenden Leib satt fressen.
-          </p>
+            verfallenden Leib satt fressen.</p>
+          <br />
           <span class="zusammenfassungworldboss">Zusammenfassung über den Kampf :</span>
           <p>Oranomonos liegt im Sterben , verfügt aber immer noch über große Macht , die sie gegen Euch einsetzt. Bleibt auf distanz, wenn sie die 
           'Saat des Kummers' herbeiruft, und meidet 'Verdorrte Winde' , die sich umherbewegen. Nutzt mächtige Defensivfähigkeiten und versammelt Euch
           für effizientere Heilung, wenn sie ihr 'Klagelied des gefallenen Sanktums' singt.</p>
-
         </div>
       </div>
     </div>
@@ -206,6 +205,7 @@
             <ul class="social-network social-circle">
               <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
             </ul>
           </div>
         </div>
