--- a/siteprogress.html
+++ b/siteprogress.html
@@ -40,13 +40,13 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
-              <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
-              <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
-              <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
-              <li><a class="dropdown-item" href="#">Spitzen des Aufstiegs</a></li>
-              <li><a class="dropdown-item" href="#">Nebel von Tirna Scithe</a></li>
-              <li><a class="dropdown-item" href="#">Theater der Schmerzen</a></li>
-              <li><a class="dropdown-item" href="#">Seuchensturz</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Die Nekrotische Schneiße</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Hallen der Sühne</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Blutige Tiefen</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Spitzen des Aufstiegs</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Nebel von Tirna Scithe</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Theater der Schmerzen</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Seuchensturz</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -56,8 +56,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="worldboss_neu.html">Schattenlande</a></li>
-              <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
-              <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Schloss Nathria</a></li>
+              <li><a class="dropdown-item" href="siteprogress.html">Ketten der Herrschaft</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -92,8 +92,8 @@
     </div>
   </div>
 <!-- footer Start -->
-<footer class="mainfooter bottom" role="contentinfo">
-  <div class="footer-middle">
+<footer class="mainfooter bottom siteprogress" role="contentinfo">
+  <div class="fixbottom  footer-middle">
     <div class="container">
       <div class="row col-lg-12">
         <div class="col-lg-3 col-sm-6">
@@ -146,6 +146,7 @@
           <ul class="social-network social-circle">
             <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
