--- a/startseite_neu.html
+++ b/startseite_neu.html
@@ -108,7 +108,7 @@
           auch schon über 12 jahre her ist.
           <br />
           <br />
-          Die Seite ist komplett Responive und enthält neben der Lightbox für die Bildergallerie ein Anmelde Formular welche über ein JavaScript ausgelesen wird.
+          Die Seite ist komplett Responsive und enthält neben der Lightbox für die Bildergallerie ein Anmelde Formular welche über ein JavaScript ausgelesen wird.
           Es wurden alle Seiten gefüllt und mit Content versehen . Ziel dieser Webseite ist es ihnen mein Hobby näher zubringen und vielleicht dem ein oder anderen 
           noch ein Paar Tipps und Tricks auf den Weg mitzugeben !
         </div>
